Add Snapmaker Orca profile name display for U1 Extended mode
Shows filament profile name in format: `<BRAND> <MATERIAL> <TYPE>` below
NDEF Record Size when using `openspool_extended` format.

--- a/public/index.html
+++ b/public/index.html
@@ -792,6 +792,10 @@
                 📊 <strong>NDEF Record Size:</strong> <span id="recordSize">?</span>
             </div>
 
+            <div class="info-box hidden" id="orcaProfileInfo" style="margin-top: 0.5rem; background: rgba(100, 150, 200, 0.1); border-color: #6496c8;">
+                🔧 <strong>Snapmaker Orca Profile:</strong> <span id="orcaProfileName">-</span>
+            </div>
+
             <div class="status-message" id="writeStatus"></div>
 
             <button class="btn-secondary" onclick="app.setMode('menu')">← Back to Menu</button>
