--- a/public/index.html
+++ b/public/index.html
@@ -792,8 +792,11 @@
                 📊 <strong>NDEF Record Size:</strong> <span id="recordSize">?</span>
             </div>
 
-            <div class="info-box hidden" id="orcaProfileInfo" style="margin-top: 0.5rem; background: rgba(100, 150, 200, 0.1); border-color: #6496c8;">
-                🔧 <strong>Snapmaker Orca Profile:</strong> <span id="orcaProfileName">-</span>
+            <div class="info-box hidden" id="orcaProfileInfo" style="margin-top: 0.5rem; padding: 0.6rem 0.75rem; background: rgba(100, 150, 200, 0.1); border-color: #6496c8; display: flex; align-items: center; justify-content: space-between; gap: 0.75rem; font-size: 0.85rem;">
+                <div style="flex: 1;">
+                    🔧 <strong>Snapmaker Orca Profile:</strong> <code id="orcaProfileName" style="background: rgba(0,0,0,0.2); padding: 0.2rem 0.4rem; border-radius: 3px; font-size: 0.95em; font-weight: bold;">-</code>
+                </div>
+                <button onclick="app.copyOrcaProfile()" style="width: auto; padding: 0.3rem 0.5rem; margin: 0; font-size: 1rem; line-height: 1; flex-shrink: 0;" class="btn-secondary" title="Copy profile name">📋</button>
             </div>
 
             <div class="status-message" id="writeStatus"></div>
