--- a/public/index.html
+++ b/public/index.html
@@ -254,9 +254,10 @@
         }
 
         .status-message {
-            padding: 1rem;
+            padding: 0.75rem;
             border-radius: 4px;
-            margin-top: 1rem;
+            margin-top: 0.5rem;
+            font-size: 0.85rem;
             display: none;
         }
 
@@ -265,19 +266,19 @@
         }
 
         .status-message.success {
-            background: rgba(76, 175, 80, 0.2);
+            background: rgba(76, 175, 80, 0.1);
             border: 1px solid var(--success);
             color: var(--success);
         }
 
         .status-message.error {
-            background: rgba(244, 67, 54, 0.2);
+            background: rgba(244, 67, 54, 0.1);
             border: 1px solid var(--error);
             color: var(--error);
         }
 
         .status-message.warning {
-            background: rgba(255, 152, 0, 0.2);
+            background: rgba(255, 152, 0, 0.1);
             border: 1px solid var(--warning);
             color: var(--warning);
         }
