Add 'None' subtype variant with empty string payload value
- Fix Orca profile name to not append 'Basic' when subtype is empty
- Default variant subtype to None (empty string)

--- a/public/index.html
+++ b/public/index.html
@@ -555,7 +555,7 @@
             <div class="form-group" data-field="extendedSubType">
                 <label>Material Variant</label>
                 <div class="material-palette" id="variantPalette"></div>
-                <input type="hidden" id="extendedSubType" value="Basic">
+                <input type="hidden" id="extendedSubType" value="">
             </div>
 
             <div class="form-group">
